--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
         <meta name="robots" content="noindex">
         <meta name="theme-color" content="#000000">
         <title>Boilerplate Module</title>
+
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     </head>
     <body>
-        <noscript>
-            You need to enable JavaScript to run this app.
-        </noscript>
-        <div id="root"></div>
+        <div id="root">
+            <div id="map" style="width: 500px; height: 500px;"></div>
+        </div>
     </body>
 </html>
