--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -5,13 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="noindex">
         <meta name="theme-color" content="#000000">
-        <title>Boilerplate Module</title>
-
+        <title>Yandex Maps API Boilerplate Module</title>
         <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     </head>
     <body>
-        <div id="root">
-            <div id="map" style="width: 500px; height: 500px;"></div>
-        </div>
+        <h1>Yandex Maps API Boilerplate Module</h1>
+        <div id="root" style="width: 900px; height: 500px; max-width: 100%;"></div>
     </body>
 </html>
