--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -9,7 +9,11 @@
         <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     </head>
     <body>
-        <h1>Yandex Maps API Boilerplate Module</h1>
-        <div id="root" style="width: 900px; height: 500px; max-width: 100%;"></div>
+        <div id="root">
+            <div class="container" style="width: 940px; max-width: 100%; margin-left: auto; margin-right: auto;">
+                <h1>Yandex Maps API Boilerplate Module</h1>
+                <div id="map" style="width: 100%; height: 500px;"></div>
+            </div>
+        </div>
     </body>
 </html>
