--- a/examples/index.html
+++ b/examples/index.html
@@ -6,11 +6,14 @@
         <meta name="robots" content="noindex">
         <meta name="theme-color" content="#000000">
         <title>Yandex Maps API Boilerplate Module</title>
-        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     </head>
     <body>
         <div id="root">
-            <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
+            <h1>Yandex Maps API Boilerplate Module</h1>
+            <h2>Examples</h2>
+            <ul>
+                <li><a href="main/">Main</a></li>
+            </ul>
         </div>
-    <script type="text/javascript" src="main.js"></script></body>
+    </body>
 </html>
